--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="linear-loader"></div>
     <div id="backdrop-root"></div>
     <div id="overlay-root"></div>
     <div id="root"></div>
