--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,12 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"
       crossorigin="anonymous"
     ></script>
+    <!-- bootstrap 4 toogle -->
+    <link
+      href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <title>React App</title>
   </head>
 
